--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,45 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
+attrs==25.4.0
 bcrypt==4.3.0
 blinker==1.9.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
 click==8.2.1
 colorama==0.4.6
+et_xmlfile==2.0.0
 Flask==3.1.1
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-MySQLdb==2.0.0
 Flask-WTF==1.2.2
+frozenlist==1.8.0
+holidays==0.88
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+multidict==6.7.1
 mysqlclient==2.2.7
+numpy==2.4.1
+openpyxl==3.1.5
+pandas==3.0.0
+pillow==12.0.0
+propcache==0.4.1
+PyJWT==2.10.1
+PyMySQL==1.1.1
+pyTelegramBotAPI==4.30.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+reportlab==4.4.4
+requests==2.32.5
+six==1.17.0
+twilio==9.10.0
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
 Werkzeug==3.1.3
 WTForms==3.2.1
+yarl==1.22.0
